--- a/index.html
+++ b/index.html
@@ -217,20 +217,25 @@
       }
     }
 
-    async function saveSchedule() {
-      const ref = doc(db, "schedules", currentDate);
-      const slots = [];
-      Array.from(tableBody.rows).forEach((row, rowIndex) => {
-        Array.from(row.cells).slice(1).forEach((td, colIndex) => {
-          slots.push({
-            row: rowIndex + 1,
-            col: colIndex,
-            type: td.className || ""
-          });
-        });
+async function saveSchedule() {
+  const ref = doc(db, "schedules", currentDate);
+  const slots = [];
+
+  Array.from(tableBody.rows).forEach((row, rowIndex) => {
+    Array.from(row.cells).slice(1).forEach((td, colIndex) => {
+      slots.push({
+        row: rowIndex + 1,
+        col: colIndex,
+        type: td.className || ""
       });
-      await setDoc(ref, { slots });
-    }
+    });
+  });
+
+  const teacherNames = Array.from(nameRow.querySelectorAll("select.name"))
+                            .map(select => select.value);
+
+  await setDoc(ref, { slots, teacherNames });
+}
 
     async function loadSchedule(dateStr) {
       const ref = doc(db, "schedules", dateStr);
@@ -238,27 +243,39 @@
       if (!snap.exists()) {
         await setDoc(ref, { slots: [] });
       }
-      onSnapshot(ref, (docSnap) => {
-        if (docSnap.exists()) {
-          const data = docSnap.data();
-          restoreTable(data.slots);
-        }
-      });
+   onSnapshot(ref, (docSnap) => {
+  if (docSnap.exists()) {
+    const data = docSnap.data();
+    restoreTable(data.slots, data.teacherNames);
+  }
+});
     }
 
-    function restoreTable(slots) {
- if (!tableBody.rows.length) createTable(40);  // <- 안전장치
-        slots.forEach(item => {
-        const cell = tableBody.rows[item.row - 1].cells[item.col + 1];
-        const type = item.type;
-        cell.className = type;
-        cell.textContent = type === "general" ? "일반" :
-                           type === "designated" ? "지명" :
-                           type === "reserved" ? "예약" : "";
-      });
-      updateScores();
-      updateNextSuggestions();
-    }
+   function restoreTable(slots, teacherNames = []) {
+  createTable(40);
+
+  // 선생님 이름 복원
+  nameRow.querySelectorAll("select.name").forEach((select, i) => {
+    const value = teacherNames[i] || "이름";
+    select.value = value;
+    activeTeachers[i] = (value !== "이름");
+    select.classList.toggle("selected", value !== "이름");
+  });
+
+  // 셀 내용 복원
+  slots.forEach(item => {
+    const cell = tableBody.rows[item.row - 1]?.cells?.[item.col + 1];
+    if (!cell) return;
+    const type = item.type;
+    cell.className = type;
+    cell.textContent = type === "general" ? "일반" :
+                       type === "designated" ? "지명" :
+                       type === "reserved" ? "예약" : "";
+  });
+
+  updateScores();
+  updateNextSuggestions();
+}
 
     createTable(40);
     loadSchedule(currentDate);
