--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
       padding: 5px 10px;
       font-size: 16px;
     }
+    .table-wrapper {
+      overflow: auto;
+      max-height: 80vh;
+      border: 1px solid #ccc;
+    }
     table {
       width: 100%;
       border-collapse: collapse;
@@ -34,6 +39,18 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+    }
+    thead th {
+      position: sticky;
+      top: 0;
+      z-index: 2;
+      background-color: #eaeaea;
+    }
+    tbody th {
+      position: sticky;
+      left: 0;
+      z-index: 1;
+      background-color: #fff;
     }
     th {
       background-color: #eaeaea;
@@ -68,26 +85,28 @@
     <label for="datePicker">날짜 선택: </label>
     <input type="date" id="datePicker">
   </div>
-  <table id="orderTable">
-    <thead>
-      <tr id="nameRow">
-        <th>순서</th>
-        <th><div class="header-cell"><select class="name">
-          <option>이름</option><option>경희</option><option>안나</option><option>카라</option><option>키르케</option>
-        </select><span class="score"></span></div></th>
-        <th><div class="header-cell"><select class="name">
-          <option>이름</option><option>경희</option><option>안나</option><option>카라</option><option>키르케</option>
-        </select><span class="score"></span></div></th>
-        <th><div class="header-cell"><select class="name">
-          <option>이름</option><option>경희</option><option>안나</option><option>카라</option><option>키르케</option>
-        </select><span class="score"></span></div></th>
-        <th><div class="header-cell"><select class="name">
-          <option>이름</option><option>경희</option><option>안나</option><option>카라</option><option>키르케</option>
-        </select><span class="score"></span></div></th>
-      </tr>
-    </thead>
-    <tbody id="tableBody"></tbody>
-  </table>
+  <div class="table-wrapper">
+    <table id="orderTable">
+      <thead>
+        <tr id="nameRow">
+          <th>순서</th>
+          <th><div class="header-cell"><select class="name">
+            <option>이름</option><option>경희</option><option>안나</option><option>카라</option><option>키르케</option>
+          </select><span class="score"></span></div></th>
+          <th><div class="header-cell"><select class="name">
+            <option>이름</option><option>경희</option><option>안나</option><option>카라</option><option>키르케</option>
+          </select><span class="score"></span></div></th>
+          <th><div class="header-cell"><select class="name">
+            <option>이름</option><option>경희</option><option>안나</option><option>카라</option><option>키르케</option>
+          </select><span class="score"></span></div></th>
+          <th><div class="header-cell"><select class="name">
+            <option>이름</option><option>경희</option><option>안나</option><option>카라</option><option>키르케</option>
+          </select><span class="score"></span></div></th>
+        </tr>
+      </thead>
+      <tbody id="tableBody"></tbody>
+    </table>
+  </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
