--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
 </div>
 <p id="loginStatus" style="text-align: center; font-weight: bold; color: darkblue;"></p>
 
+<!-- 🔐 회원가입 UI -->
+<div id="signupBox" style="text-align: center; margin-bottom: 20px;">
+  <input type="email" id="signupEmail" placeholder="회원가입 이메일" style="margin-right: 5px;" />
+  <input type="password" id="signupPassword" placeholder="비밀번호" style="margin-right: 5px;" />
+  <button onclick="signup()">회원가입</button>
+</div>
+<p id="signupStatus" style="text-align: center; color: green;"></p>
+
   <div class="table-wrapper">
     <table id="orderTable">
       <thead>
