--- a/index.html
+++ b/index.html
@@ -315,5 +315,7 @@ async function saveSchedule() {
     createTable(60);
     loadSchedule(currentDate);
   </script>
+<script type="module" src="script.js"></script>
+
 </body>
 </html>
