--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 </head>
 <body>
   <h1>에나타 상담 순서표</h1>
+ <p id="userEmailDisplay" style="position: absolute; top: 10px; left: 10px; font-size: 14px; color: #333;"></p>
   <div class="date-area">
     <label for="datePicker">날짜 선택: </label>
     <input type="date" id="datePicker">
