--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </style>
 </head>
 <body>
- <p id="userEmailDisplay" style="position: absolute; top: 10px; left: 10px; font-size: 14px; color: #333;"></p>
+ <p id="userEmailDisplay" style="position: absolute; top: 10px; right: 10px; font-size: 14px; color: #333;"></p>
   <h1>에나타 상담 순서표</h1>
   <div class="date-area">
     <label for="datePicker">날짜 선택: </label>
