--- a/index.html
+++ b/index.html
@@ -109,20 +109,12 @@
     <table id="orderTable">
       <thead>
         <tr id="nameRow">
-          <th>순서</th>
-          <th><div class="header-cell"><select class="name">
-            <option>이름</option><option>경희</option><option>안나</option><option>카라</option><option>키르케</option>
-          </select><span class="score"></span></div></th>
-          <th><div class="header-cell"><select class="name">
-            <option>이름</option><option>경희</option><option>안나</option><option>카라</option><option>키르케</option>
-          </select><span class="score"></span></div></th>
-          <th><div class="header-cell"><select class="name">
-            <option>이름</option><option>경희</option><option>안나</option><option>카라</option><option>키르케</option>
-          </select><span class="score"></span></div></th>
-          <th><div class="header-cell"><select class="name">
-            <option>이름</option><option>경희</option><option>안나</option><option>카라</option><option>키르케</option>
-          </select><span class="score"></span></div></th>
-        </tr>
+  <th>순서</th>
+  <th><div class="header-cell"><select class="name"><option>이름</option></select><span class="score"></span></div></th>
+  <th><div class="header-cell"><select class="name"><option>이름</option></select><span class="score"></span></div></th>
+  <th><div class="header-cell"><select class="name"><option>이름</option></select><span class="score"></span></div></th>
+  <th><div class="header-cell"><select class="name"><option>이름</option></select><span class="score"></span></div></th>
+</tr>
       </thead>
       <tbody id="tableBody"></tbody>
     </table>
