--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
 </head>
 <body>
  <p id="userEmailDisplay" style="position: absolute; top: 10px; right: 10px; font-size: 14px; color: #333;"></p>
+
+<p id="userEmailDisplay" style="position: absolute; top: 10px; right: 150px; font-size: 14px; color: #333;"></p>
+<button id="logoutBtn" onclick="logout()" style="position: absolute; top: 10px; right: 10px; display: none;">
+  로그아웃
+</button>
+
   <h1>에나타 상담 순서표</h1>
   <div class="date-area">
     <label for="datePicker">날짜 선택: </label>
@@ -326,7 +332,6 @@ window.logout = function () {
     });
 };
   </script>
-<script type="module" src="script.js"></script>
 
 </body>
 </html>
