--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
   </style>
 </head>
 <body>
- <p id="userEmailDisplay" style="position: absolute; top: 10px; right: 10px; font-size: 14px; color: #333;"></p>
+ <p id="userEmailDisplay" style="position: absolute; top: 10px; lift: 10px; font-size: 14px; color: #333;"></p>
 
-<button id="logoutBtn" onclick="logout()" style="position: absolute; top: 10px; right: 10px; display: none;">
+<button id="logoutBtn" onclick="logout()" style="position: absolute; top: 10px; lift: 10px; display: none;">
   로그아웃
 </button>
 
