--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
       padding: 20px;
       background: #f5f5f5;
     }
+
+td, th, input, select, button {
+  user-select: none;
+  -webkit-user-select: none;       /* iOS, Safari */
+  -webkit-touch-callout: none;     /* iOS 길게 눌렀을 때 팝업 차단 */
+  -ms-user-select: none;           /* IE */
+}
+
     h1 {
       text-align: center;
     }
